<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/programFragment"
        android:icon="@drawable/ic_program"
        android:title="@string/program" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="Stats" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
